Visualizacion de fallo y nivel

--- a/gui/templates/index.html
+++ b/gui/templates/index.html
@@ -38,6 +38,11 @@
         transform: scale(1.6);
       }
 
+      .tabulador {
+          padding-left: 10%;
+          font-size: 5em;
+      }
+
       #black-center {
         z-index: 1;
         display: block;
@@ -214,6 +219,10 @@
 
 </head>
 <body>
+    <div class="tabulador">
+        <p id="nivel"> Nivel: </p>
+        <p id="estado"> ¿Empezamos? </p>
+    </div>
     <div class="gameboard">
       <div id="black-center" >
         <div class="start">
