--- a/gui/static/styles.css
+++ b/gui/static/styles.css
@@ -10,9 +10,6 @@ body {
     margin: 0;
     padding: 0 50px;
 }
-button {
-    margin: 0 0.2vw;
-}
 
 .apagado {
     filter: brightness(0.5);
@@ -21,11 +18,12 @@ button {
 .gameboard {
     box-sizing: border-box;
     flex: 1 1 400px;
+    max-width: 70vw;
     height: auto;
     border-radius: 50%;
     overflow: hidden;
     margin: 0 auto;
-    /* box-shadow: 0 0 110px -20px #fff; */
+    background-color: black;
     border: 3vh solid #000;
     position: relative;
     display: flex;
@@ -36,7 +34,7 @@ button {
     flex: 1 1 auto;
 }
 
-.gameboard::after {
+.gameboard::before {
     z-index: -1;
     display: block;
     content: "";
@@ -46,6 +44,7 @@ button {
 }
 
 .tabulador {
+    text-align: center;
     padding-left: 10%;
     font-size: 5em;
     flex: 1 1 auto;
@@ -53,7 +52,7 @@ button {
 
 #black-center {
     z-index: 1;
-    display: block;
+    display: flex;
     position: absolute;
     width: 20vh;
     height: 20vh;
@@ -61,7 +60,6 @@ button {
     border-radius: 50%;
     overflow: hidden;
     margin: 0 auto;
-    padding: 0 auto;
     top: calc(50% - 12vh);
     left: calc(50% - 12vh);
     box-shadow: 0 0 70px -20px #fff;
@@ -70,7 +68,6 @@ button {
 
 .color {
     flex: 0 0 50%;
-    /* width: 50%; */
     height: 50%;
     -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
     backface-visibility: hidden;
@@ -144,7 +141,6 @@ button {
     display: none;
 }
 * {
-    /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
     font-family: "Press Start 2P", cursive;
     font-size: 0.7em;
 }
@@ -163,8 +159,7 @@ button {
     padding-top: 3.5vh;
     height: 3vh;
 }
-.start,
-#speaker {
+.start {
     width: 100%;
     height: 50%;
     display: inline-block;
@@ -174,12 +169,12 @@ button {
         #555 10%,
         rgba(136, 136, 136, 0.1)
     );
-}
-.start {
     display: flex;
     justify-content: space-around;
     text-align: center;
+    align-items: center;
 }
+
 .start button {
     padding: 0;
     width: 6vh;
@@ -188,7 +183,6 @@ button {
     box-shadow: -2px 0 18px -6px #fff;
     border: 0.6vh solid #000;
     font-size: 0.9vh;
-    margin-top: 2vh;
     transform: scale(1.15);
 }
 .start button:focus,
