Separar resultado de respuesta y el estado

--- a/gui/static/styles.css
+++ b/gui/static/styles.css
@@ -45,9 +45,8 @@ body {
 
 .tabulador {
     text-align: center;
-    padding-left: 10%;
     font-size: 5em;
-    flex: 1 1 auto;
+    flex: 1 1 100%;
 }
 
 #black-center {
