--- a/gui/templates/index.html
+++ b/gui/templates/index.html
@@ -16,6 +16,7 @@
         <div class="tabulador">
             <p id="nivel">Nivel:</p>
             <p id="estado">¿Empezamos?</p>
+            <span id="respuesta">?</span>
         </div>
         <div class="gameboard">
             <div id="black-center">
